--- a/main.html
+++ b/main.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+
+<nav>
+<h1> 3 random audios </h1>	
+<ul>
+<li><a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">URl 1</a></li>
+<li><a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">URL 2</a></li>
+<li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">URL 3</a></li>
+
+</ul>
+</nav>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
