--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav>
-<h1> 3 random audios </h1>	
+
 <ul>
 <li><a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">URl 1</a></li>
 <li><a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">URL 2</a></li>
@@ -17,6 +17,14 @@
 
 </ul>
 </nav>
+	<h1> 3 random audios </h1>	
+	<audio controls>
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/ogg">
+  <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mpeg">
+  <source src=" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mpeg">
+  
+</audio>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
