--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 <nav>
 
 <ul>
-<li><a href="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">URl 1</a></li>
-<li><a href="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">URL 2</a></li>
-<li><a href="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3">URL 3</a></li>
+<li><a href="https://www.w3schools.com/">URl 1</a></li>
+<li><a href="https://www.w3schools.com/java/default.asp">URL 2</a></li>
+<li><a href="https://www.w3schools.com/js/default.asp">URL 3</a></li>
 
 </ul>
 </nav>
