--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
 <nav>
 
 <ul>
-<li><a href="https://www.w3schools.com/">URl 1</a></li>
-<li><a href="https://www.w3schools.com/java/default.asp">URL 2</a></li>
-<li><a href="https://www.w3schools.com/js/default.asp">URL 3</a></li>
+<li><a href="https://www.w3schools.com/" target="_blank">URl 1</a></li>
+<li><a href="https://www.w3schools.com/java/default.asp" target="_blank">URL 2</a></li>
+<li><a href="https://www.w3schools.com/js/default.asp" target="_blank">URL 3</a></li>
 
 </ul>
 </nav>
