--- a/main.html
+++ b/main.html
@@ -14,24 +14,24 @@
 <li><a href="https://www.w3schools.com/" target="_blank">URl 1</a></li>
 <li><a href="https://www.w3schools.com/java/default.asp" target="_blank">URL 2</a></li>
 <li><a href="https://www.w3schools.com/js/default.asp" target="_blank">URL 3</a></li>
-
 </ul>
 </nav>
-	<h1> 3 random audios </h1>	
+<h1> 3 random audios </h1>	
 <audio controls>
+ <source src=" audio.ogg"	type="audio/ogg">
  <source src=" http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/ogg">
-	
 </audio>
 <audio>
+	<source src="audio.ogg"	type="audio/ogg">
 	<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg " type="audio/ogg">
 </audio>	
 <audio>
+	<source src="audio.ogg"	type="audio/ogg">
 	<source src=" http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/ogg">
 </audio>		
 	
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<script type="text/javascript" src="./script.js"></script>
 
 </body>
 
