--- a/main.html
+++ b/main.html
@@ -16,19 +16,20 @@
 <li><a href="https://www.w3schools.com/js/default.asp" target="_blank">URL 3</a></li>
 </ul>
 </nav>
-<h1> 3 random audios </h1>	
+<h1>Audio 1</h1>
 <audio controls>
 	<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"/>
 </audio>
-<audio controls>
-	    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"/>
-	
-</audio>
-<audio controls>
-		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/>
 
+<h1>Audio 2</h1>
+<audio controls>
+	<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"/>
 </audio>
-		
+
+<h1>Audio 3</h1>
+<audio controls>
+	<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/>
+</audio>
 	
 	<!-- the entire body must be written by student -->
 <script type="text/javascript" src="./script.js"></script>
