--- a/main.html
+++ b/main.html
@@ -17,24 +17,11 @@
 </ul>
 </nav>
 <div>
-    <h1>Audio 1</h1>
-    <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"/>
-    </audio>
-</div>
+    <h1>3 random audios</h1>
+	<audio controls src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3"></audio>
+    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+	<audio controls src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
 
-<div>
-    <h1>Audio 2</h1>
-    <audio controls>
-        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg"/>
-    </audio>
-</div>
-
-<div>
-    <h1>Audio 3</h1>
-    <audio controls>
-        <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"/>
-    </audio>
 </div>
 	
 	<!-- the entire body must be written by student -->
